--- a/index.html
+++ b/index.html
@@ -552,6 +552,15 @@
         margin-left: auto;
         margin-right: auto;
       }
+
+      /* Mobile styles für Bento-Titel */
+      @media (max-width: 768px) {
+        .bento-title {
+          font-size: 1.75rem;
+          line-height: 1.2;
+        }
+      }
+
       .bento-description {
         max-width: 700px;
         color: #666;
@@ -1055,6 +1064,15 @@
         border-radius: 0.375rem;
       }
 
+      /* Mobile styles for lamp component */
+      @media (max-width: 768px) {
+        .lamp-container {
+          height: 500px;
+          min-height: auto;
+          border-radius: 0;
+        }
+      }
+
       .lamp-inner {
         position: absolute;
         inset: 0;
@@ -1366,6 +1384,19 @@
         max-height: 100%;
         object-fit: contain;
         display: block;
+      }
+
+      /* Mobile styles für Bilder */
+      @media (max-width: 768px) {
+        .bento-image {
+          max-width: 100%;
+          width: 100%;
+        }
+
+        .bento-image img {
+          width: 100%;
+          object-fit: cover;
+        }
       }
 
       /* Fix für einheitliche Kartenhöhen */
@@ -1709,7 +1740,6 @@
     <section class="py-16 md:py-24 bg-gray-900 text-white overflow-hidden">
       <div class="container mx-auto px-4 md:px-6">
         <div class="flex flex-col items-center text-center mb-12 md:mb-16">
-          <div class="testimonial-badge">Kundenstimmen</div>
           <h2 class="text-3xl md:text-4xl font-bold tracking-tight mb-4">
             Was unsere Kunden über BPER sagen
           </h2>
@@ -1717,9 +1747,11 @@
             Erfahren Sie, wie das BPER System das Leben unserer Kunden verändert
             hat und ihnen hilft, ihre Gesundheit besser zu verstehen
           </p>
-          <div class="hero-buttons">
-            <button class="btn btn-primary checkout-button">
-              Jetzt bestellen
+          <div class="hero-buttons mt-16">
+            <button
+              class="btn btn-primary checkout-button dark-mode bg-transparent text-white border border-white hover:bg-white hover:text-gray-900 transition-colors"
+            >
+              Teste jetzt deinen Bedarf
               <span class="icon">→</span>
             </button>
           </div>
@@ -2334,7 +2366,7 @@
 
     <!-- FAQ Section -->
     <section class="w-full py-20 lg:py-40 bg-gray-50">
-      <div class="container mx-auto">
+      <div class="container mx-auto text-left">
         <div class="grid lg:grid-cols-2 gap-10">
           <div class="flex gap-10 flex-col">
             <div class="flex gap-4 flex-col">
@@ -2388,13 +2420,13 @@
               </div>
             </div>
           </div>
-          <div class="w-full">
+          <div class="w-full text-left">
             <!-- Accordion Item 1 -->
             <div class="border-b">
               <div class="flex">
                 <button
-                  class="flex flex-1 items-center justify-between py-4 font-medium transition-all hover:underline"
-                  data-accordion-toggle
+                  class="flex flex-1 items-center justify-between py-4 font-medium transition-all hover:underline text-left"
+                  data-accordion-toggle=""
                 >
                   <span
                     >Was unterscheidet das BPER System von herkömmlichen
@@ -2412,13 +2444,13 @@
                     stroke-linecap="round"
                     stroke-linejoin="round"
                   >
-                    <path d="M6 9l6 6 6-6" />
+                    <path d="M6 9l6 6 6-6"></path>
                   </svg>
                 </button>
               </div>
               <div
-                class="overflow-hidden text-sm transition-all"
-                data-accordion-content
+                class="overflow-hidden text-sm transition-all text-left"
+                data-accordion-content=""
                 style="display: none"
               >
                 <div class="pb-4 pt-0">
@@ -2436,8 +2468,8 @@
             <div class="border-b">
               <div class="flex">
                 <button
-                  class="flex flex-1 items-center justify-between py-4 font-medium transition-all hover:underline"
-                  data-accordion-toggle
+                  class="flex flex-1 items-center justify-between py-4 font-medium transition-all hover:underline text-left"
+                  data-accordion-toggle=""
                 >
                   <span
                     >Ist das BPER System den ganzen Tag über angenehm zu
@@ -2455,13 +2487,13 @@
                     stroke-linecap="round"
                     stroke-linejoin="round"
                   >
-                    <path d="M6 9l6 6 6-6" />
+                    <path d="M6 9l6 6 6-6"></path>
                   </svg>
                 </button>
               </div>
               <div
-                class="overflow-hidden text-sm transition-all"
-                data-accordion-content
+                class="overflow-hidden text-sm transition-all text-left"
+                data-accordion-content=""
                 style="display: none"
               >
                 <div class="pb-4 pt-0">
@@ -2478,8 +2510,8 @@
             <div class="border-b">
               <div class="flex">
                 <button
-                  class="flex flex-1 items-center justify-between py-4 font-medium transition-all hover:underline"
-                  data-accordion-toggle
+                  class="flex flex-1 items-center justify-between py-4 font-medium transition-all hover:underline text-left"
+                  data-accordion-toggle=""
                 >
                   <span
                     >Wie genau ist das BPER System im Vergleich zu klinischen
@@ -2497,13 +2529,13 @@
                     stroke-linecap="round"
                     stroke-linejoin="round"
                   >
-                    <path d="M6 9l6 6 6-6" />
+                    <path d="M6 9l6 6 6-6"></path>
                   </svg>
                 </button>
               </div>
               <div
-                class="overflow-hidden text-sm transition-all"
-                data-accordion-content
+                class="overflow-hidden text-sm transition-all text-left"
+                data-accordion-content=""
                 style="display: none"
               >
                 <div class="pb-4 pt-0">
@@ -2521,15 +2553,15 @@
             <div class="border-b">
               <div class="flex">
                 <button
-                  class="flex flex-1 items-center justify-between py-4 font-medium transition-all hover:underline"
-                  data-accordion-toggle
+                  class="flex flex-1 items-center justify-between py-4 font-medium transition-all hover:underline text-left"
+                  data-accordion-toggle=""
                 >
                   <span
                     >Benötige ich ein Rezept für den Kauf des BPER
                     Systems?</span
                   >
                   <svg
-                    class="h-4 w-4 shrink-0 transition-transform duration-200"
+                    class="h-4 w-4 shrink-0 transition-transform duration-200 rotate-180"
                     xmlns="http://www.w3.org/2000/svg"
                     width="24"
                     height="24"
@@ -2540,14 +2572,14 @@
                     stroke-linecap="round"
                     stroke-linejoin="round"
                   >
-                    <path d="M6 9l6 6 6-6" />
+                    <path d="M6 9l6 6 6-6"></path>
                   </svg>
                 </button>
               </div>
               <div
-                class="overflow-hidden text-sm transition-all"
-                data-accordion-content
-                style="display: none"
+                class="overflow-hidden text-sm transition-all text-left"
+                data-accordion-content=""
+                style="display: block"
               >
                 <div class="pb-4 pt-0">
                   Nein, das BPER System ist ohne Rezept erhältlich. Wir
@@ -2562,8 +2594,8 @@
             <div class="border-b">
               <div class="flex">
                 <button
-                  class="flex flex-1 items-center justify-between py-4 font-medium transition-all hover:underline"
-                  data-accordion-toggle
+                  class="flex flex-1 items-center justify-between py-4 font-medium transition-all hover:underline text-left"
+                  data-accordion-toggle=""
                 >
                   <span
                     >Wie funktioniert die mobile App mit dem BPER System?</span
@@ -2586,7 +2618,7 @@
               </div>
               <div
                 class="overflow-hidden text-sm transition-all"
-                data-accordion-content
+                data-accordion-content=""
                 style="display: none"
               >
                 <div class="pb-4 pt-0">
@@ -2604,8 +2636,8 @@
             <div class="border-b">
               <div class="flex">
                 <button
-                  class="flex flex-1 items-center justify-between py-4 font-medium transition-all hover:underline"
-                  data-accordion-toggle
+                  class="flex flex-1 items-center justify-between py-4 font-medium transition-all hover:underline text-left"
+                  data-accordion-toggle=""
                 >
                   <span>Welche Akkulaufzeit kann ich erwarten?</span>
                   <svg
@@ -2626,7 +2658,7 @@
               </div>
               <div
                 class="overflow-hidden text-sm transition-all"
-                data-accordion-content
+                data-accordion-content=""
                 style="display: none"
               >
                 <div class="pb-4 pt-0">
@@ -2643,8 +2675,8 @@
             <div class="border-b">
               <div class="flex">
                 <button
-                  class="flex flex-1 items-center justify-between py-4 font-medium transition-all hover:underline"
-                  data-accordion-toggle
+                  class="flex flex-1 items-center justify-between py-4 font-medium transition-all hover:underline text-left"
+                  data-accordion-toggle=""
                 >
                   <span
                     >Sind meine Gesundheitsdaten beim BPER System sicher?</span
@@ -2667,7 +2699,7 @@
               </div>
               <div
                 class="overflow-hidden text-sm transition-all"
-                data-accordion-content
+                data-accordion-content=""
                 style="display: none"
               >
                 <div class="pb-4 pt-0">
@@ -2685,8 +2717,8 @@
             <div class="border-b">
               <div class="flex">
                 <button
-                  class="flex flex-1 items-center justify-between py-4 font-medium transition-all hover:underline"
-                  data-accordion-toggle
+                  class="flex flex-1 items-center justify-between py-4 font-medium transition-all hover:underline text-left"
+                  data-accordion-toggle=""
                 >
                   <span
                     >Wie lange ist die Garantiezeit für das BPER System?</span
@@ -2709,7 +2741,7 @@
               </div>
               <div
                 class="overflow-hidden text-sm transition-all"
-                data-accordion-content
+                data-accordion-content=""
                 style="display: none"
               >
                 <div class="pb-4 pt-0">
