Button 'Teste jetzt deinen Bedarf' mit Blutdruck-Test-Seite verknüpft

--- a/index.html
+++ b/index.html
@@ -1511,6 +1511,12 @@
               Jetzt bestellen
               <span class="icon">→</span>
             </button>
+            <a
+              href="blutdruck-test.html"
+              class="btn ml-4 border border-primary text-primary hover:bg-primary hover:text-white transition-colors duration-300 px-4 py-2 rounded-md"
+            >
+              Blutdruck testen
+            </a>
           </div>
 
           <div class="hero-image-container">
@@ -1758,12 +1764,13 @@
             hat und ihnen hilft, ihre Gesundheit besser zu verstehen
           </p>
           <div class="hero-buttons mt-16">
-            <button
+            <a
+              href="blutdruck-test.html"
               class="btn btn-primary checkout-button dark-mode bg-transparent text-white border border-white hover:bg-white hover:text-gray-900 transition-colors"
             >
               Teste jetzt deinen Bedarf
               <span class="icon">→</span>
-            </button>
+            </a>
           </div>
         </div>
 
@@ -2191,7 +2198,7 @@
             </p>
             <button
               disabled=""
-              class="mt-auto w-full py-2 bg-gray-100 text-gray-300 rounded-md cursor-not-allowed"
+              class="mt-auto w-full py-2 bg-gray-100 text-gray-300 rounded-xl cursor-not-allowed"
             >
               Ausverkauft
             </button>
@@ -2277,7 +2284,7 @@
               gewährleisten.
             </p>
             <button
-              class="mt-auto w-full py-2 bg-blue-600 hover:bg-blue-700 text-white rounded-md transition duration-300 checkout-button"
+              class="mt-auto w-full py-2 bg-blue-600 hover:bg-blue-700 text-white rounded-xl transition duration-300 checkout-button"
             >
               Jetzt reservieren
             </button>
@@ -2350,7 +2357,7 @@
               Gesundheit, die sich lohnt.
             </p>
             <button
-              class="mt-auto w-full py-2 bg-gray-600 hover:bg-gray-700 text-white rounded-md transition duration-300 checkout-button"
+              class="mt-auto w-full py-2 bg-gray-600 hover:bg-gray-700 text-white rounded-xl transition duration-300 checkout-button"
             >
               Jetzt vorbestellen
             </button>
@@ -3235,10 +3242,10 @@
               </li>
               <li>
                 <a
-                  href="/service/faq"
+                  href="blutdruck-test.html"
                   class="text-gray-600 hover:text-blue-700 transition-colors duration-200 text-sm focus:outline-none focus:text-blue-700 focus:underline"
                 >
-                  FAQ
+                  Blutdruck-Test
                 </a>
               </li>
             </ul>
