--- a/index.html
+++ b/index.html
@@ -1766,7 +1766,7 @@
           <div class="hero-buttons mt-16">
             <a
               href="blutdruck-test.html"
-              class="btn btn-primary checkout-button dark-mode bg-transparent text-white border border-white hover:bg-white hover:text-gray-900 transition-colors"
+              class="btn btn-primary dark-mode bg-transparent text-white border border-white hover:bg-white hover:text-gray-900 transition-colors"
             >
               Teste jetzt deinen Bedarf
               <span class="icon">→</span>
