Links zu relativen Pfaden geändert für bessere Portabilität

--- a/index.html
+++ b/index.html
@@ -1512,8 +1512,8 @@
               <span class="icon">→</span>
             </button>
             <a
-              href="blutdruck-test.html"
-              class="btn ml-4 border border-primary text-primary hover:bg-primary hover:text-white transition-colors duration-300 px-4 py-2 rounded-md"
+              href="./blutdruck-test.html"
+              class="btn ml-4 border border-primary text-primary hover:bg-primary hover:text-white transition-colors duration-300 px-4 py-2 rounded-xl"
             >
               Blutdruck testen
             </a>
@@ -1765,7 +1765,7 @@
           </p>
           <div class="hero-buttons mt-16">
             <a
-              href="blutdruck-test.html"
+              href="./blutdruck-test.html"
               class="btn btn-primary dark-mode bg-transparent text-white border border-white hover:bg-white hover:text-gray-900 transition-colors"
             >
               Teste jetzt deinen Bedarf
@@ -3242,7 +3242,7 @@
               </li>
               <li>
                 <a
-                  href="blutdruck-test.html"
+                  href="./blutdruck-test.html"
                   class="text-gray-600 hover:text-blue-700 transition-colors duration-200 text-sm focus:outline-none focus:text-blue-700 focus:underline"
                 >
                   Blutdruck-Test
