--- a/blutdruck-diagnose.html
+++ b/blutdruck-diagnose.html
@@ -30,7 +30,7 @@
         display: inline-flex;
         align-items: center;
         justify-content: center;
-        border-radius: 0.375rem;
+        border-radius: 0.75rem;
         font-size: 0.875rem;
         font-weight: 500;
         height: 2.5rem;
@@ -49,10 +49,10 @@
     <header class="bg-white shadow-sm py-4">
       <div class="container mx-auto px-4">
         <div class="flex items-center justify-between">
-          <a href="index.html" class="text-xl font-semibold text-primary"
+          <a href="./index.html" class="text-xl font-semibold text-primary"
             >BPER System</a
           >
-          <a href="index.html" class="button flex items-center">
+          <a href="./index.html" class="button flex items-center">
             <svg
               class="w-4 h-4 mr-2"
               fill="none"
@@ -207,7 +207,7 @@
             </p>
             <button
               disabled=""
-              class="mt-auto w-full py-2 bg-gray-100 text-gray-300 rounded-md cursor-not-allowed"
+              class="mt-auto w-full py-2 bg-gray-100 text-gray-300 rounded-xl cursor-not-allowed"
             >
               Ausverkauft
             </button>
@@ -293,7 +293,7 @@
               gewährleisten.
             </p>
             <button
-              class="mt-auto w-full py-2 bg-blue-600 hover:bg-blue-700 text-white rounded-md transition duration-300 checkout-button"
+              class="mt-auto w-full py-2 bg-blue-600 hover:bg-blue-700 text-white rounded-xl transition duration-300 checkout-button"
             >
               Jetzt reservieren
             </button>
@@ -366,7 +366,7 @@
               Gesundheit, die sich lohnt.
             </p>
             <button
-              class="mt-auto w-full py-2 bg-gray-600 hover:bg-gray-700 text-white rounded-md transition duration-300 checkout-button"
+              class="mt-auto w-full py-2 bg-gray-600 hover:bg-gray-700 text-white rounded-xl transition duration-300 checkout-button"
             >
               Jetzt vorbestellen
             </button>
@@ -398,7 +398,7 @@
 
         if (!bloodPressureDataString) {
           // Wenn keine Daten vorhanden sind, zurück zur Eingabeseite
-          window.location.href = 'blutdruck-test.html';
+          window.location.href = './blutdruck-test.html';
           return;
         }
 
