Checkout-Buttons durch Links zur Blutdruck-Test-Seite ersetzt

--- a/index.html
+++ b/index.html
@@ -1507,10 +1507,10 @@
             </h1>
           </div>
           <div class="hero-buttons">
-            <button class="btn btn-primary checkout-button">
-              Jetzt bestellen
+            <a href="blutdruck-test.html" class="btn btn-primary">
+              BPER-Check: Starte deine Analyse
               <span class="icon">→</span>
-            </button>
+            </a>
           </div>
 
           <div class="hero-image-container">
@@ -2277,11 +2277,12 @@
               Reservierung pro Person, um Exklusivität und Fairness zu
               gewährleisten.
             </p>
-            <button
-              class="mt-auto w-full py-2 bg-blue-600 hover:bg-blue-700 text-white rounded-xl transition duration-300 checkout-button"
+            <a
+              href="blutdruck-test.html"
+              class="mt-auto w-full py-2 bg-blue-600 hover:bg-blue-700 text-white rounded-xl transition duration-300 block text-center"
             >
-              Jetzt reservieren
-            </button>
+              Eignung testen
+            </a>
           </div>
 
           <!-- Angebot 3 -->
@@ -2350,11 +2351,12 @@
               revolutionären Technologie wider – eine Investition in Ihre
               Gesundheit, die sich lohnt.
             </p>
-            <button
-              class="mt-auto w-full py-2 bg-gray-600 hover:bg-gray-700 text-white rounded-xl transition duration-300 checkout-button"
+            <a
+              href="blutdruck-test.html"
+              class="mt-auto w-full py-2 bg-gray-600 hover:bg-gray-700 text-white rounded-xl transition duration-300 block text-center"
             >
-              Jetzt vorbestellen
-            </button>
+              Eignung testen
+            </a>
           </div>
         </div>
 
