--- a/index.html
+++ b/index.html
@@ -1508,7 +1508,7 @@
           </div>
           <div class="hero-buttons">
             <a href="blutdruck-test.html" class="btn btn-primary">
-              BPER-Check: Starte deine Analyse
+              Starte deine Analyse
               <span class="icon">→</span>
             </a>
           </div>
