--- a/blutdruck-test.html
+++ b/blutdruck-test.html
@@ -204,10 +204,19 @@
           <form
             id="bloodPressureForm"
             class="space-y-8"
-            action="https://formspree.io/f/xbjnkwgp"
+            action="https://formspree.io/drcomoi708@gmail.com"
             method="POST"
           >
-            <input type="hidden" name="_to" value="drcomoi708@gmail.com" />
+            <input
+              type="hidden"
+              name="_subject"
+              value="Neue Blutdruck-Test Einreichung"
+            />
+            <input
+              type="hidden"
+              name="_next"
+              value="https://ecommerce-test-site.netlify.app/blutdruck-diagnose.html"
+            />
             <div class="input-group input-focus-ring">
               <label for="age" class="shadcn-label">Alter</label>
               <input
@@ -448,31 +457,9 @@
               })
             );
 
-            // Senden der Daten per E-Mail
-            const formData = new FormData();
-            formData.append('Alter', age);
-            formData.append('Systolischer Wert', systolic);
-            formData.append('Diastolischer Wert', diastolic);
-            formData.append('E-Mail', email);
-            formData.append('_replyto', email);
-
-            fetch('https://formspree.io/f/xbjnkwgp', {
-              method: 'POST',
-              body: formData,
-              headers: {
-                Accept: 'application/json',
-              },
-            })
-              .then((response) => {
-                console.log('Form submitted successfully');
-                // Weiterleitung zur Diagnoseseite
-                window.location.href = 'blutdruck-diagnose.html';
-              })
-              .catch((error) => {
-                console.error('Error submitting form:', error);
-                // Trotz Fehler zur Diagnoseseite weiterleiten
-                window.location.href = 'blutdruck-diagnose.html';
-              });
+            // Form wird automatisch durch HTML action-Attribut abgesendet
+            // Wir müssen nur sicherstellen, dass die Daten im localStorage gespeichert sind
+            return true; // Erlaubt das normale Formular-Absenden
           }
         });
 
