Migrated from Formspree to Netlify Forms

--- a/blutdruck-test.html
+++ b/blutdruck-test.html
@@ -201,22 +201,39 @@
         <div
           class="bg-white bg-opacity-95 rounded-lg shadow-lg p-6 md:p-10 border border-gray-100 form-card"
         >
+          <!-- Hidden form for Netlify bot detection -->
+          <form
+            name="blood-pressure-test"
+            netlify
+            netlify-honeypot="bot-field"
+            hidden
+          >
+            <input type="text" name="age" />
+            <input type="text" name="systolic" />
+            <input type="text" name="diastolic" />
+            <input type="email" name="email" />
+            <input type="text" name="subject" />
+          </form>
+
           <form
             id="bloodPressureForm"
             class="space-y-8"
-            action="https://formspree.io/drcomoi708@gmail.com"
+            name="blood-pressure-test"
             method="POST"
+            data-netlify="true"
           >
+            <input type="hidden" name="form-name" value="blood-pressure-test" />
             <input
               type="hidden"
-              name="_subject"
+              name="subject"
               value="Neue Blutdruck-Test Einreichung"
             />
-            <input
-              type="hidden"
-              name="_next"
-              value="https://ecommerce-test-site.netlify.app/blutdruck-diagnose.html"
-            />
+            <!-- Honeypot field for spam protection -->
+            <p class="hidden">
+              <label>
+                Don't fill this out if you're human: <input name="bot-field" />
+              </label>
+            </p>
             <div class="input-group input-focus-ring">
               <label for="age" class="shadcn-label">Alter</label>
               <input
@@ -321,8 +338,9 @@
               id="submitButton"
               class="button w-full h-12 text-base hover:scale-105 transition-transform"
             >
-              <span class="mr-2">Jetzt testen</span>
+              <span id="buttonText" class="mr-2">Jetzt testen</span>
               <svg
+                id="buttonIcon"
                 xmlns="http://www.w3.org/2000/svg"
                 class="h-5 w-5"
                 viewBox="0 0 20 20"
@@ -333,6 +351,27 @@
                   d="M10.293 5.293a1 1 0 011.414 0l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414-1.414L12.586 11H5a1 1 0 110-2h7.586l-2.293-2.293a1 1 0 010-1.414z"
                   clip-rule="evenodd"
                 />
+              </svg>
+              <svg
+                id="loadingIcon"
+                class="animate-spin h-5 w-5 hidden"
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+              >
+                <circle
+                  class="opacity-25"
+                  cx="12"
+                  cy="12"
+                  r="10"
+                  stroke="currentColor"
+                  stroke-width="4"
+                ></circle>
+                <path
+                  class="opacity-75"
+                  fill="currentColor"
+                  d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"
+                ></path>
               </svg>
             </button>
           </form>
@@ -348,6 +387,9 @@
         const diastolicInput = document.getElementById('diastolic');
         const emailInput = document.getElementById('email');
         const submitButton = document.getElementById('submitButton');
+        const buttonText = document.getElementById('buttonText');
+        const buttonIcon = document.getElementById('buttonIcon');
+        const loadingIcon = document.getElementById('loadingIcon');
 
         // Character count elements
         const ageRemaining = document.getElementById('age-remaining');
@@ -446,6 +488,12 @@
             isDiastolicValid &&
             isEmailValid
           ) {
+            // Zeige Ladeanimation
+            buttonText.textContent = 'Wird gesendet...';
+            buttonIcon.classList.add('hidden');
+            loadingIcon.classList.remove('hidden');
+            submitButton.disabled = true;
+
             // Speichern der Daten im localStorage für die Diagnoseseite
             localStorage.setItem(
               'bloodPressureData',
@@ -457,9 +505,80 @@
               })
             );
 
-            // Form wird automatisch durch HTML action-Attribut abgesendet
-            // Wir müssen nur sicherstellen, dass die Daten im localStorage gespeichert sind
-            return true; // Erlaubt das normale Formular-Absenden
+            // Prüfen, ob wir auf einem lokalen Server sind
+            const isLocalServer =
+              window.location.hostname === 'localhost' ||
+              window.location.hostname === '127.0.0.1' ||
+              window.location.hostname.includes('192.168');
+
+            if (isLocalServer) {
+              // Auf lokalem Server: Daten in der Konsole ausgeben und direkt zur Diagnoseseite weiterleiten
+              console.log('Lokaler Server erkannt. Formular-Daten:', {
+                age,
+                systolic,
+                diastolic,
+                email,
+                subject: 'Neue Blutdruck-Test Einreichung',
+              });
+
+              // Simuliere eine kurze Verzögerung für bessere UX
+              setTimeout(() => {
+                window.location.href = 'blutdruck-diagnose.html';
+              }, 1500);
+
+              // Zusätzlich: Daten an den lokalen Server senden, falls dieser sie verarbeiten kann
+              try {
+                fetch('http://localhost:3002/save-form-data', {
+                  method: 'POST',
+                  headers: {
+                    'Content-Type': 'application/json',
+                  },
+                  body: JSON.stringify({
+                    age,
+                    systolic,
+                    diastolic,
+                    email,
+                    subject: 'Neue Blutdruck-Test Einreichung',
+                  }),
+                }).catch((err) =>
+                  console.log(
+                    'Server-Anfrage fehlgeschlagen, ignoriert im lokalen Modus'
+                  )
+                );
+              } catch (e) {
+                console.log(
+                  'Fehler beim Senden an lokalen Server, wird ignoriert'
+                );
+              }
+            } else {
+              // Auf Produktionsserver: Netlify Forms verwenden
+              // Netlify Forms verarbeitet das Formular automatisch
+              // Wir müssen nur die Daten im localStorage speichern und dann das Formular normal absenden
+
+              // Erstelle ein FormData-Objekt für die Netlify-Submission
+              const formData = new FormData(form);
+
+              // Verwende fetch für bessere Kontrolle über den Prozess
+              fetch('/', {
+                method: 'POST',
+                headers: {
+                  'Content-Type': 'application/x-www-form-urlencoded',
+                },
+                body: new URLSearchParams(formData).toString(),
+              })
+                .then(() => {
+                  console.log('Form successfully submitted to Netlify');
+                  window.location.href = 'blutdruck-diagnose.html';
+                })
+                .catch((error) => {
+                  console.error('Netlify form submission error:', error);
+                  // Bei Fehler trotzdem zur Diagnoseseite weiterleiten
+                  window.location.href = 'blutdruck-diagnose.html';
+                });
+            }
+
+            // Verhindere das normale Formular-Absenden, da wir es manuell handhaben
+            return false;
           }
         });
 
